# Websage

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: routes.py  schemas.py
backend/app/core/: config.py
backend/app/models/: cache_entry.py  summary.py
backend/app/repositories/: cache.py
backend/app/services/: llm_provider.py  summarizer.py
frontend/: index.html  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: SummaryPanel.tsx
frontend/src/hooks/: useLLM.ts
frontend/src/styles/: global.css
