[project]
name = "websage-backend"
version = "0.1.0"
description = "FastAPI backend for Websage"
authors = [{ name = "Websage" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "httpx>=0.26.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
